--- a/_sass/pages/_project.scss
+++ b/_sass/pages/_project.scss
@@ -37,8 +37,8 @@
   text-align: center;
     position: absolute;
     opacity: 0;
-    -webkit-transition: opacity 0.6s ease-out;
-    transition: opacity 0.6s ease-out;
+    // -webkit-transition: opacity 0.6s ease-out;
+    // transition: opacity 0.6s ease-out;
 }
 
 .carousel-item img {
@@ -57,7 +57,7 @@
     height: 40px;
     line-height: 35px;
     position: absolute;
-    top: 50%;
+    top: 45%;
     // -webkit-transform: translate(0, -50%);
     cursor: pointer;
     // -ms-transform: translate(0, -50%);
@@ -119,5 +119,17 @@
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet,
 #carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet {
-    color: #428bca;
+    color: #6233c1;
+}
+
+button.button-project {
+  background: transparent;
+  border: 3px solid $font-color;
+  margin-top: 15px;
+  font-weight: bold;
+  width: 120px;
+  height: 40px;
+    a{
+      color: $font-color;
+    }
 }
